[package]
name = "preconf-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.3", features = [
    "full",
    "rpc-types-eth",
    "rpc-types-beacon",
    "serde",
    "providers",
    "signer-mnemonic",
    "rlp",
] }
axum ={version="0.7.5", features=["tokio"]}
bytes = "1.6.1"
clap = {version="4.5.9", features=["derive"]}
dashmap = "6.0.1"
eyre = "0.6.12"
futures = "0.3.30"
futures-util = "0.3.30"
hashbrown = "0.14.5"
http = "1.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-eventsource = "0.6.0"
reqwest-middleware = "0.3"
reqwest-tracing = "0.5"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.3.0"
ssz_types = "0.6.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tower-http = {version="0.5.2", features=["trace"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree_hash = "0.6.0"
tree_hash_derive = "0.6.0"
url = "2.5.0"


[dev-dependencies]
tempfile = "3.10.1"